--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./base/_bases.scss";
 
 @import "./utils/variables";
+@import "./utils/animations";
 @import "./utils/breakpoints";
 
 @import "./components/loader";
@@ -13,4 +14,5 @@
 @import "./layouts/footers"; 
 @import "./layouts/layouts.scss";
 
-@import "./pages/homepage"; 
+@import "./pages/homepage";
+@import "./pages/restaurants"; 
